syntax = "proto3";
package admin;

option go_package = "admin/v1/auth;admin";

import "third_party/tagger/tagger.proto";

message UpdateUserRequest {
  string user_id = 1 [(tagger.tags) = "binding:\"required\""];
  int32 status = 2 [(tagger.tags) = "binding:\"required\""];
  string user_name = 3 [(tagger.tags) = "binding:\"required\""];
}

message UpdateUserResponse {

}
